# python_course

./: .env.template  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  LICENSE  README.md  alembic.ini  definitions.py  docker-compose.yml  main.py  nbgrader_config.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  settings.py
.github/: FUNDING.yml
.github/workflows/: tests.yaml
alembic/: README  env.py
alembic/versions/: 08da162c51bf_add_email_constraints.py  e43177bfe90b_nbgrader_schema.py
demo/: lesson.ipynb
exchanger/: engine.py  feedback.py
exchanger/resources/: error_body.html  grades_body.html  styles.css  template.html
grader/: database.py  engine.py
publisher/: .publishignore  engine.py
scripts/: add_lesson.py  add_user.py  publish_lesson.py  remove_user.py  send_submission.py
scripts/shared/: __init__.py
src/jpgrader/: data_models.py  run.py  smtp_sender.py
src/jpgrader/alembic/: env.py
src/jpgrader/alembic/versions/: 08da162c51bf_add_email_constraints.py  e43177bfe90b_nbgrader_schema.py
src/jpgrader/exchanger/: engine.py  feedback.py
src/jpgrader/grader/: database.py  engine.py
src/jpgrader/publisher/: engine.py
src/jpgrader/resources/html_templates/: styles.css
tests/: test_sample.py
utils/: app_logger.py  data_models.py  smtp_sender.py
