[tool.poetry]
name = "jupyter-grader"
version = "0.1.0"
description = ""
authors = ["Evgeny Tsydenov <evgenytsydenov@gmail.com>"]
readme = "README.md"
packages = [{include = "jupyter_grader", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
nbgrader = "^0.8.1"
google-api-python-client = "^2.70.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
